Fixing browser's setText method's bug that it does not support subdomain "document.domain=..." setting Fix bug of Combo key controling and mouse controling do not work together Fixed bug of IE 6.0/7.0 that display minimized button 2px offset Fixed bug that Text control show scrollbar unexpected in IE 7.0

--- a/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Shell.css
+++ b/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Shell.css
@@ -307,6 +307,9 @@
 	top:50%;
 	margin-top:-10px;
 }
+* html .shell-title-icon {
+	margin-top:-8px;
+}
 .shell-title-min, .shell-title-normal-max, .shell-title-close {
 	position:absolute;
 	top:1px;
